--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,9 @@ python = "^3.7"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+
+[project.scripts]
+alpfore = "alpfore.cli:app"
